# oneflow-lite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/oneflow-lite/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/oneflow-lite/: CMakeLists.txt
runtime/oneflow-lite/base/: CMakeLists.txt  common.h  datatype.cc  datatype.h  device.h  dims.cc  dims.h  layout.cc  layout.h  memory.h  refcount.cc  refcount.h  stringref.cc  stringref.h
runtime/oneflow-lite/core/: CMakeLists.txt  alloca.cc  alloca.h  allocator.cc  allocator.h  buffer.cc  buffer.h  device.cc  device.h  device_context.cc  device_context.h  device_util.cc  device_util.h  driver.cc  driver.h  event.cc  event.h  executable.cc  executable.h  execution_context.cc  execution_context.h  execution_unit.cc  execution_unit.h  flatbuffer_utils.cc  flatbuffer_utils.h  operator.cc  operator.h  span.cc  span.h  stream.cc  stream.h  tensor.cc  tensor.h  vtable_handle.h
runtime/oneflow-lite/delegates/: CMakeLists.txt
runtime/oneflow-lite/delegates/ascend/: CMakeLists.txt  ascend_alloca.cc  ascend_alloca.h  ascend_create_op.cc  ascend_create_op.h  ascend_device.cc  ascend_device.h  ascend_driver.cc  ascend_utils.cc  ascend_utils.h
runtime/oneflow-lite/delegates/ascend/cmake/: FindAscendSdk.cmake
runtime/oneflow-lite/delegates/ascend/ops/: copy.cc  mlir_jit.cc
runtime/oneflow-lite/delegates/cuda/: CMakeLists.txt  cuda_allocator.cc  cuda_device.cc
runtime/oneflow-lite/delegates/generic/: CMakeLists.txt  generic_alloca.cc  generic_alloca.h  generic_allocator.cc  generic_allocator.h
runtime/oneflow-lite/delegates/x86/: CMakeLists.txt  x86_alloca.cc  x86_alloca.h  x86_allocator.cc  x86_device.cc  x86_device.h  x86_driver.cc
runtime/oneflow-lite/tests/: CMakeLists.txt  test_executable.cc  test_resnet50.cc
schemas/: CMakeLists.txt  executable.fbs
schemas/attributes/: CMakeLists.txt
